protect from spaces in path